--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class=" hero-container container">
                 <div class="hero-h1" >
 
-                <h1 class="header1"> Effective Solution<br>For Your Business </h1>  
+                <h1 class="header1"> Effective Solutions
+                    <br/>for Your Business </h1>  
                 </div>
                     <div class="hero-button">
                         <button type="button" class="filter filter-active">Order Service</button>
