--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,15 @@
 
 <body>
     <!--Header Part-->
-    <header>
+    <header class="portfolio-header">
         <div class="container header-container">
             <nav class="header-navigation">
                 <a href="./index.html" class="link-logo">
                     <span class="logo-web">WEB</span><span class="logo-studio-top">STUDIO</span>
                 </a>
                 <ul class="navbar lists">
-                    <li><a href="./index.html" class="navlist-top-pages currentoption">Studio</a> </li>
-                    <li><a href="./portfolio.html" class="navlist-top-pages">Portfolio</a></li>
+                    <li><a href="./index.html" class="navlist-top-pages ">Studio</a> </li>
+                    <li><a href="./portfolio.html" class="navlist-top-pages currentoption">Portfolio</a></li>
                     <li><a href="#" class="navlist-top-pages">Contacts</a></li>
                 </ul>
             </nav>
