--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--Header Part-->
-    <header>
+    <header class="header">
         <div class="container header-container">
             <nav class="header-navigation">
                 <a href="./index.html" class="link-logo">
@@ -40,23 +40,16 @@
         <main>
             <!--This is the 1ST Section-->
             <section class="hero hero-background ">
-            <div class=" hero-container container">
-                <div class="hero-h1" >
-
-                <h1 class="header1"> Effective Solutions
-                    <br/>for Your Business </h1>  
+                <div class=" hero-container container">
+                    <h1 class="header1"> Effective Solutions
+                        <br/>for Your Business </h1>  
+                            <button type="button" class="filter filter-active">Order Service</button>
                 </div>
-                    <div class="hero-button">
-                        <button type="button" class="filter filter-active">Order Service</button>
-                    </div>
-            </div>
             </section> <!--End 1st Section-->
             <!--This is the 2nd Section-->
             <section class="section">
                 <div class="container features-container">
-                
-                <div class="features lists">
-                    <div class="features-list">
+                <ul class="features lists">
                     <li> 
                         <h3 class="features-list-title"> Strategy </h3> 
                         <p class="features-description">
@@ -64,37 +57,29 @@
                         problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
-                    </div>
-                    <div class="features-list">
                     <li>
                         <h3 class="features-list-title"> Punctuality </h3>
                         <p class="features-description">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
-                </div>
-                <div class="features-list">
                     <li>
                         <h3 class="features-list-title">  Diligence </h3>
                         <p class="features-description">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
-                    </div>
-                    <div class="features-list">
                     <li>
                         <h3 class="features-list-title"> Technologies </h3>
                         <p class="features-description">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                         </p>
                     </li>
-                    </div>
                 </ul>
-       
                 </div>
             </section> <!--End 2nd Section-->
             <!--This is the 3rd Section-->
-            <section class="section2">
+            <section class="section section-no-top-padding">
                 <div class="container whatwedo-container">
                 <h2 class="section-title"> What are we doing </h2>
                 <ul class="whatwedo lists">
@@ -164,7 +149,7 @@
 
     <!--This is the Footer-->
     <footer class="footer">
-        <div class="footer-container">
+        <div class="container">
             <a href="./index.html" class="link-logo">
                 <span class="logo-web">WEB</span><span class="logo-studio-bottom">STUDIO</span>
             </a>
